[gd_scene load_steps=47 format=2]

[ext_resource path="res://Szenes/GroundElements/LowLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Graphics/Grass1.png" type="Texture" id=2]
[ext_resource path="res://scripts/Ralf.gd" type="Script" id=3]
[ext_resource path="res://ParallaxBackground.gd" type="Script" id=4]
[ext_resource path="res://Graphics/Disco-2.png" type="Texture" id=5]
[ext_resource path="res://VHS.shader" type="Shader" id=6]
[ext_resource path="res://Graphics/birthday-hat-vector-7.jpg" type="Texture" id=7]
[ext_resource path="res://scripts/highscore.gd" type="Script" id=8]
[ext_resource path="res://scripts/DeathText.gd" type="Script" id=9]
[ext_resource path="res://Graphics/Collectable1.png" type="Texture" id=10]
[ext_resource path="res://TV.shader" type="Shader" id=11]
[ext_resource path="res://Szenes/Collectables/PartyHat.tscn" type="PackedScene" id=12]
[ext_resource path="res://scripts/PartyHat1.gd" type="Script" id=13]
[ext_resource path="res://scripts/CanvasLayer.gd" type="Script" id=14]
[ext_resource path="res://Graphics/DinoParty_SpritesDefault.png" type="Texture" id=15]
[ext_resource path="res://Graphics/DinoParty_SpritesHat.png" type="Texture" id=16]
[ext_resource path="res://PixelFont.tres" type="DynamicFont" id=17]
[ext_resource path="res://scripts/Disco.gd" type="Script" id=18]
[ext_resource path="res://Szenes/Collectables/PartyUtils.tscn" type="PackedScene" id=19]
[ext_resource path="res://Szenes/GroundElements/HighLevelPassable.tscn" type="PackedScene" id=20]
[ext_resource path="res://Graphics/heart.png" type="Texture" id=21]
[ext_resource path="res://Graphics/SkyBackgroundGradient1280x1440.png" type="Texture" id=22]
[ext_resource path="res://Szenes/GroundElements/Ground.tscn" type="PackedScene" id=23]
[ext_resource path="res://Szenes/Enemies/TrafficCone.tscn" type="PackedScene" id=24]
[ext_resource path="res://Szenes/GroundElements/HighLevelSolid.tscn" type="PackedScene" id=25]
[ext_resource path="res://Music/dino_bgm.ogg" type="AudioStream" id=26]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 266.576, 99.3461 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 69.248, 11.7191 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 85.6763, 123.532 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7763.48, 111.832 )

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6.05922, 10 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 187, 0, 187, 250 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 374, 0, 187, 250 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 187, 250 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 561, 0, 187, 250 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 187, 0, 187, 250 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 374, 0, 187, 250 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 561, 0, 187, 250 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 187, 250 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "Stand_Hat",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "Hit",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Hat",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "Hat_Hit",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "Stand",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 47.4751, 41.6222 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 1.41146, 2.48174 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=19]
shader = ExtResource( 6 )
shader_param/tape_wave_amount = 0.003
shader_param/tape_crease_amount = 0.0
shader_param/color_displacement = 0.0
shader_param/lines_velocity = 0.1

[sub_resource type="ShaderMaterial" id=20]
render_priority = -2
shader = ExtResource( 11 )
shader_param/vertJerkOpt = 0.05
shader_param/vertMovementOpt = 0.0
shader_param/bottomStaticOpt = 0.0
shader_param/bottomStaticStrenth = 0.0
shader_param/scalinesOpt = 0.326
shader_param/rgbOffsetOpt = 0.0
shader_param/horzFuzzOpt = 0.0

[node name="World" type="Node2D"]
script = ExtResource( 8 )
__meta__ = {
"_edit_horizontal_guides_": [ -602.085 ],
"_edit_vertical_guides_": [ 4931.06, 1349.83 ]
}

[node name="LevelDesign" type="Node2D" parent="."]

[node name="TrafficCone2" parent="LevelDesign" instance=ExtResource( 24 )]
position = Vector2( 1543.05, 565.988 )

[node name="TrafficCone" parent="LevelDesign" instance=ExtResource( 24 )]
position = Vector2( 1168.29, 562.206 )

[node name="PartyUtils" parent="LevelDesign" instance=ExtResource( 19 )]
position = Vector2( 717.943, 550.451 )
z_index = 1

[node name="Ground" parent="LevelDesign" instance=ExtResource( 23 )]
position = Vector2( 851.958, 717.723 )

[node name="Ground2" type="StaticBody2D" parent="LevelDesign"]
position = Vector2( 2153.06, 717.723 )

[node name="Sprite" type="Sprite" parent="LevelDesign/Ground2"]
position = Vector2( 45.1176, 0 )
scale = Vector2( 0.140752, 0.45 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDesign/Ground2"]
position = Vector2( 52.2954, 0 )
shape = SubResource( 1 )

[node name="Ground5" type="StaticBody2D" parent="LevelDesign"]
position = Vector2( 6523.23, 717.301 )

[node name="Sprite" type="Sprite" parent="LevelDesign/Ground5"]
position = Vector2( 45.1176, 0 )
scale = Vector2( 0.140752, 0.45 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDesign/Ground5"]
position = Vector2( 52.2954, 0 )
shape = SubResource( 1 )

[node name="TrafficCone3" parent="LevelDesign" instance=ExtResource( 24 )]
position = Vector2( 2181.23, 567.046 )

[node name="Ground3" parent="LevelDesign" instance=ExtResource( 23 )]
position = Vector2( 3547.84, 720.919 )

[node name="GLvl1" type="StaticBody2D" parent="LevelDesign"]
position = Vector2( 3490.12, 493.695 )

[node name="Sprite" type="Sprite" parent="LevelDesign/GLvl1"]
scale = Vector2( 0.20062, 0.0525814 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDesign/GLvl1"]
shape = SubResource( 2 )

[node name="GLvl2" type="StaticBody2D" parent="LevelDesign"]
position = Vector2( 8478.07, 493.695 )

[node name="Sprite" type="Sprite" parent="LevelDesign/GLvl2"]
scale = Vector2( 0.105199, 0.0525814 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDesign/GLvl2"]
shape = SubResource( 2 )

[node name="TrafficCone4" parent="LevelDesign" instance=ExtResource( 24 )]
position = Vector2( 3343.28, 428.849 )

[node name="TrafficCone5" parent="LevelDesign" instance=ExtResource( 24 )]
position = Vector2( 3710.47, 429.196 )

[node name="PartyUtil" parent="LevelDesign" instance=ExtResource( 19 )]
position = Vector2( 3559.12, 565.465 )

[node name="Ground4" parent="LevelDesign" instance=ExtResource( 23 )]
position = Vector2( 5254.57, 724.043 )

[node name="TrafficCone6" parent="LevelDesign" instance=ExtResource( 24 )]
position = Vector2( 4205.8, 567.941 )

[node name="TrafficCone7" parent="LevelDesign" instance=ExtResource( 24 )]
position = Vector2( 4476.19, 568.182 )

[node name="TrafficCone8" parent="LevelDesign" instance=ExtResource( 24 )]
position = Vector2( 4731.45, 570.2 )

[node name="LowLevel" parent="LevelDesign" instance=ExtResource( 1 )]
position = Vector2( 5506.18, 455.873 )

[node name="HighLevelPassable" parent="LevelDesign" instance=ExtResource( 20 )]
position = Vector2( 5899.48, 511.501 )

[node name="TrafficCone9" parent="LevelDesign" instance=ExtResource( 24 )]
position = Vector2( 5253.56, 456.95 )

[node name="PartyHad" parent="LevelDesign" instance=ExtResource( 12 )]
position = Vector2( 5905.1, 393.266 )

[node name="StaticBody2D" type="StaticBody2D" parent="LevelDesign"]
position = Vector2( 7102.4, 717.301 )

[node name="Sprite" type="Sprite" parent="LevelDesign/StaticBody2D"]
scale = Vector2( 0.045326, 0.45 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDesign/StaticBody2D"]
shape = SubResource( 3 )

[node name="StaticBody2D2" type="StaticBody2D" parent="LevelDesign"]
position = Vector2( 7400.24, 717.301 )

[node name="Sprite" type="Sprite" parent="LevelDesign/StaticBody2D2"]
scale = Vector2( 0.045326, 0.45 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDesign/StaticBody2D2"]
shape = SubResource( 3 )

[node name="StaticBody2D3" type="StaticBody2D" parent="LevelDesign"]
position = Vector2( 7704.33, 717.301 )

[node name="Sprite" type="Sprite" parent="LevelDesign/StaticBody2D3"]
scale = Vector2( 0.045326, 0.45 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDesign/StaticBody2D3"]
shape = SubResource( 3 )

[node name="Ground6" parent="LevelDesign" instance=ExtResource( 23 )]
position = Vector2( 8849.95, 717.301 )

[node name="Node2D" parent="LevelDesign" instance=ExtResource( 19 )]
position = Vector2( 6602.96, 568.897 )

[node name="Node2D2" parent="LevelDesign" instance=ExtResource( 19 )]
position = Vector2( 8475.14, 434.785 )

[node name="HighLevelSolid" parent="LevelDesign" instance=ExtResource( 25 )]
position = Vector2( 9499.08, 376.75 )

[node name="HighLevelSolid2" parent="LevelDesign" instance=ExtResource( 25 )]
position = Vector2( 9964.29, 376.75 )

[node name="StaticBody2D4" type="StaticBody2D" parent="LevelDesign"]
position = Vector2( 9073.93, 309.588 )

[node name="Sprite" type="Sprite" parent="LevelDesign/StaticBody2D4"]
scale = Vector2( 0.045326, 0.45 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDesign/StaticBody2D4"]
position = Vector2( 0.87793, 12.2885 )
shape = SubResource( 3 )

[node name="Ground7" parent="LevelDesign" instance=ExtResource( 23 )]
position = Vector2( 10557.5, 719.414 )

[node name="PartyUtils2" parent="LevelDesign" instance=ExtResource( 19 )]
position = Vector2( 9507.91, 241.979 )

[node name="PartyHad2" parent="LevelDesign" instance=ExtResource( 12 )]
position = Vector2( 9956.5, 247.57 )

[node name="PU" parent="LevelDesign" instance=ExtResource( 19 )]
position = Vector2( 9720.69, 547.974 )

[node name="TrafficCone10" parent="LevelDesign" instance=ExtResource( 24 )]
position = Vector2( 10273.1, 565.219 )

[node name="TrafficCone11" parent="LevelDesign" instance=ExtResource( 24 )]
position = Vector2( 10879.5, 564.356 )

[node name="PartyUtils3" parent="LevelDesign" instance=ExtResource( 19 )]
position = Vector2( 11031.3, 583.366 )

[node name="TrafficCone12" parent="LevelDesign" instance=ExtResource( 24 )]
position = Vector2( 11191.5, 567.018 )

[node name="Ground8" parent="LevelDesign" instance=ExtResource( 23 )]
position = Vector2( 12506.3, 717.301 )

[node name="HighLevelSolid3" parent="LevelDesign" instance=ExtResource( 25 )]
position = Vector2( 12391.9, 503.931 )

[node name="HighLevelSolid4" parent="LevelDesign" instance=ExtResource( 25 )]
position = Vector2( 12392.7, 184.404 )

[node name="StaticBody2D5" type="StaticBody2D" parent="LevelDesign"]
position = Vector2( 11974.6, 309.588 )

[node name="Sprite" type="Sprite" parent="LevelDesign/StaticBody2D5"]
scale = Vector2( 0.045326, 0.45 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDesign/StaticBody2D5"]
position = Vector2( 0.87793, 12.2885 )
shape = SubResource( 3 )

[node name="StaticBody2D6" type="StaticBody2D" parent="LevelDesign"]
position = Vector2( 11974.6, 60.6988 )

[node name="Sprite" type="Sprite" parent="LevelDesign/StaticBody2D6"]
scale = Vector2( 0.045326, 0.45 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDesign/StaticBody2D6"]
position = Vector2( 0.87793, 12.2885 )
shape = SubResource( 3 )

[node name="PartyUtils4" parent="LevelDesign" instance=ExtResource( 19 )]
position = Vector2( 12386.9, 372.624 )

[node name="PartyHad3" parent="LevelDesign" instance=ExtResource( 12 )]
position = Vector2( 12396.8, 49.0288 )

[node name="HighLevelSolid5" parent="LevelDesign" instance=ExtResource( 25 )]
position = Vector2( 13334.4, 186.923 )

[node name="HighLevelSolid6" parent="LevelDesign" instance=ExtResource( 25 )]
position = Vector2( 12857.4, 129.917 )

[node name="PartyUtils5" parent="LevelDesign" instance=ExtResource( 19 )]
position = Vector2( 13345.8, 61.0941 )

[node name="TrafficCone13" parent="LevelDesign" instance=ExtResource( 24 )]
position = Vector2( 12860, -9.28647 )

[node name="PartyUtils6" parent="LevelDesign" instance=ExtResource( 19 )]
position = Vector2( 12964.6, 568.313 )

[node name="Ground9" parent="LevelDesign" instance=ExtResource( 23 )]
position = Vector2( 14214.4, 718.067 )

[node name="FallTracker" type="Area2D" parent="LevelDesign"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDesign/FallTracker"]
position = Vector2( 9316.71, 943.356 )
shape = SubResource( 4 )

[node name="TrafficCone14" parent="LevelDesign" instance=ExtResource( 24 )]
position = Vector2( 14118, 563.297 )

[node name="TrafficCone15" parent="LevelDesign" instance=ExtResource( 24 )]
position = Vector2( 14539.2, 565.208 )

[node name="PartyUtils7" parent="LevelDesign" instance=ExtResource( 19 )]
position = Vector2( 14539.6, 456.912 )

[node name="Ground10" parent="LevelDesign" instance=ExtResource( 23 )]
position = Vector2( 16062.4, 718.067 )

[node name="HighLevelSolid7" parent="LevelDesign" instance=ExtResource( 25 )]
position = Vector2( 15350.3, 372.172 )

[node name="StaticBody2D7" type="StaticBody2D" parent="LevelDesign"]
position = Vector2( 14959, 278.774 )

[node name="Sprite" type="Sprite" parent="LevelDesign/StaticBody2D7"]
scale = Vector2( 0.045326, 0.45 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDesign/StaticBody2D7"]
position = Vector2( 0.87793, 12.2885 )
shape = SubResource( 3 )

[node name="StaticBody2D8" type="StaticBody2D" parent="LevelDesign"]
position = Vector2( 14959, 29.8844 )

[node name="Sprite" type="Sprite" parent="LevelDesign/StaticBody2D8"]
scale = Vector2( 0.045326, 0.45 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDesign/StaticBody2D8"]
position = Vector2( 0.87793, 12.2885 )
shape = SubResource( 3 )

[node name="StaticBody2D9" type="StaticBody2D" parent="LevelDesign"]
position = Vector2( 14959, -220.331 )

[node name="Sprite" type="Sprite" parent="LevelDesign/StaticBody2D9"]
scale = Vector2( 0.045326, 0.45 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDesign/StaticBody2D9"]
position = Vector2( 0.87793, 12.2885 )
shape = SubResource( 3 )

[node name="StaticBody2D10" type="StaticBody2D" parent="LevelDesign"]
position = Vector2( 15289.9, 22.6518 )

[node name="Sprite" type="Sprite" parent="LevelDesign/StaticBody2D10"]
scale = Vector2( 0.045326, 0.45 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDesign/StaticBody2D10"]
position = Vector2( 0.87793, 13.5835 )
shape = SubResource( 3 )

[node name="Ground11" parent="LevelDesign" instance=ExtResource( 23 )]
position = Vector2( 16363, -43.5675 )

[node name="TrafficCone16" parent="LevelDesign" instance=ExtResource( 24 )]
position = Vector2( 16275.5, -198.781 )

[node name="TrafficCone17" parent="LevelDesign" instance=ExtResource( 24 )]
position = Vector2( 16786.5, -199.144 )

[node name="PartyUtils8" parent="LevelDesign" instance=ExtResource( 19 )]
position = Vector2( 15845.4, 570.892 )

[node name="PartyHad4" parent="LevelDesign" instance=ExtResource( 12 )]
position = Vector2( 17141.4, 539.265 )

[node name="TrafficCone18" parent="LevelDesign" instance=ExtResource( 24 )]
position = Vector2( 16503.3, 562.394 )

[node name="Ground12" parent="LevelDesign" instance=ExtResource( 23 )]
position = Vector2( 18263.5, 718.067 )

[node name="StaticBody2D12" type="StaticBody2D" parent="LevelDesign"]
position = Vector2( 17149.1, 718.067 )

[node name="Sprite" type="Sprite" parent="LevelDesign/StaticBody2D12"]
scale = Vector2( 0.045326, 0.45 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDesign/StaticBody2D12"]
shape = SubResource( 3 )

[node name="GLvl3" type="StaticBody2D" parent="LevelDesign"]
position = Vector2( 17803.2, 532.646 )

[node name="Sprite" type="Sprite" parent="LevelDesign/GLvl3"]
position = Vector2( -131.886, 0 )
scale = Vector2( 0.0357671, 0.0525814 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDesign/GLvl3"]
position = Vector2( -131.75, 2.20288 )
shape = SubResource( 2 )

[node name="GLvl4" type="StaticBody2D" parent="LevelDesign"]
position = Vector2( 18028.7, 457.829 )

[node name="Sprite" type="Sprite" parent="LevelDesign/GLvl4"]
position = Vector2( -131.886, 0 )
scale = Vector2( 0.0357671, 0.0525814 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDesign/GLvl4"]
position = Vector2( -131.75, 2.20288 )
shape = SubResource( 2 )

[node name="GLvl5" type="StaticBody2D" parent="LevelDesign"]
position = Vector2( 18275.4, 393.752 )

[node name="Sprite" type="Sprite" parent="LevelDesign/GLvl5"]
position = Vector2( -131.886, 0 )
scale = Vector2( 0.0357671, 0.0525814 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDesign/GLvl5"]
position = Vector2( -131.75, 2.20288 )
shape = SubResource( 2 )

[node name="Ralf" type="KinematicBody2D" parent="."]
position = Vector2( 236.249, 559.304 )
scale = Vector2( 0.1, 0.1 )
z_index = 1
collision_mask = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
endScreen_path = "res://EndScreen.tscn"

[node name="Area2D" type="Area2D" parent="Ralf"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ralf/Area2D"]
scale = Vector2( 26.2, 41.8 )
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ralf"]
position = Vector2( 58.4637, -6.74579 )
scale = Vector2( 27.9112, 38.7103 )
shape = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="Ralf"]
position = Vector2( 3713.58, -1304.9 )
scale = Vector2( 10, 10 )
current = true
limit_left = -1000
limit_bottom = 720
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_top = 0.71
editor_draw_limits = true

[node name="Timer" type="Timer" parent="Ralf"]
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Ralf"]
scale = Vector2( 5, 5 )
frames = SubResource( 15 )
animation = "Hit"
playing = true
offset = Vector2( 0, -15 )

[node name="RightWall" type="RayCast2D" parent="Ralf"]
position = Vector2( -32.6848, -341.851 )
rotation = -1.5716
scale = Vector2( 12.4386, 6.28752 )
enabled = true

[node name="RightWall2" type="RayCast2D" parent="Ralf"]
position = Vector2( -32.6851, 319.642 )
rotation = -1.5716
scale = Vector2( 12.038, 6.28752 )
enabled = true

[node name="LeftWall" type="RayCast2D" parent="Ralf"]
position = Vector2( 19.6833, 325.24 )
rotation = 1.5708
scale = Vector2( 12.4403, 6.28752 )
enabled = true

[node name="LeftWall2" type="RayCast2D" parent="Ralf"]
position = Vector2( 17.457, -338.479 )
rotation = 1.5708
scale = Vector2( -3.90513, 6.28752 )
enabled = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Ralf"]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 20269.8, -262.487 )
scale = Vector2( 1.79124, 2.82024 )
collision_layer = 130
script = ExtResource( 18 )
endScreen_path = "res://EndScreen.tscn"

[node name="Disco" type="Sprite" parent="Area2D"]
position = Vector2( -3558.91, -68.3189 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -3569.56, 4.45207 )
z_index = 1
shape = SubResource( 16 )

[node name="DyingText" type="Label" parent="."]
margin_left = 471.768
margin_top = 404.474
margin_right = 708.768
margin_bottom = 435.474
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "				  				 Oh No!
Maby i'll be in time for the next party"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PartyHat1" type="Area2D" parent="."]
position = Vector2( 4821.6, 157.137 )
scale = Vector2( 0.32, 0.16 )
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="PartyHat1"]
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PartyHat1"]
scale = Vector2( 15.64, 9.92 )
shape = SubResource( 17 )

[node name="ScoreCounter" type="CanvasLayer" parent="."]
script = ExtResource( 14 )

[node name="Panel" type="Panel" parent="ScoreCounter"]
margin_left = 56.263
margin_top = 7.7862
margin_right = 263.263
margin_bottom = 73.786
custom_styles/panel = SubResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreField" type="Label" parent="ScoreCounter"]
margin_left = 64.2943
margin_top = 75.5378
margin_right = 354.294
margin_bottom = 109.538
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Hier sollte dein Score stehen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollectableField" type="Label" parent="ScoreCounter"]
margin_left = 122.042
margin_top = 49.2869
margin_right = 402.042
margin_bottom = 102.287
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Hier sind deine Collectables
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ScoreCounter"]
position = Vector2( 82.3141, 58.2848 )
scale = Vector2( 0.0257352, 0.0323803 )
texture = ExtResource( 10 )

[node name="x" type="Label" parent="ScoreCounter"]
margin_left = 102.944
margin_top = 45.9961
margin_right = 288.944
margin_bottom = 79.9961
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highscore" type="Label" parent="ScoreCounter"]
margin_left = 64.0042
margin_top = 99.8921
margin_right = 154.004
margin_bottom = 124.892
rect_pivot_offset = Vector2( 58.3296, 13.9885 )
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Highscore"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathText" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="Panel" type="Panel" parent="DeathText"]
margin_left = 534.509
margin_top = 312.607
margin_right = 797.509
margin_bottom = 405.607
custom_styles/panel = SubResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathTextField" type="Label" parent="DeathText"]
margin_left = 582.0
margin_top = 345.495
margin_right = 768.0
margin_bottom = 387.495
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxVHSEffect" type="ParallaxBackground" parent="."]
layer = 100

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxVHSEffect"]
motion_mirroring = Vector2( 1280, 0 )

[node name="Effects" type="Control" parent="ParallaxVHSEffect/ParallaxLayer"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBufferCopy" type="BackBufferCopy" parent="ParallaxVHSEffect/ParallaxLayer/Effects"]
position = Vector2( 0, -720 )
z_index = 100
z_as_relative = false
copy_mode = 2
rect = Rect2( 0, 0, 1280, 1440 )

[node name="ColorRect" type="ColorRect" parent="ParallaxVHSEffect/ParallaxLayer/Effects/BackBufferCopy"]
material = SubResource( 19 )
margin_right = 1280.0
margin_bottom = 1440.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBufferCopy2" type="BackBufferCopy" parent="ParallaxVHSEffect/ParallaxLayer/Effects"]
position = Vector2( 0, -720 )
z_index = 100
copy_mode = 2
rect = Rect2( 0, 0, 1280, 1440 )

[node name="ColorRect" type="ColorRect" parent="ParallaxVHSEffect/ParallaxLayer/Effects/BackBufferCopy2"]
material = SubResource( 20 )
anchor_top = 0.00277778
anchor_bottom = 0.00277778
margin_top = -4.0
margin_right = 1280.0
margin_bottom = 1436.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxSky" type="ParallaxBackground" parent="."]
script = ExtResource( 4 )
scrollingSpeed = 0.0

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxSky"]
motion_mirroring = Vector2( 1280, 0 )

[node name="Sky" type="Sprite" parent="ParallaxSky/ParallaxLayer"]
z_index = -1
texture = ExtResource( 22 )
centered = false
offset = Vector2( 0, -720 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
margin_left = 1043.38
margin_top = 476.311
margin_right = 1313.37
margin_bottom = 511.311
rect_pivot_offset = Vector2( 135, 16.4486 )
custom_fonts/font = ExtResource( 17 )
text = "SPACE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 4790.33
margin_top = 54.0628
margin_right = 5263.33
margin_bottom = 115.063
rect_pivot_offset = Vector2( 135, 16.4486 )
custom_fonts/font = ExtResource( 17 )
text = "1 "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart" type="Sprite" parent="Label4"]
position = Vector2( 42.3858, 15.2161 )
scale = Vector2( 0.0494223, 0.0653813 )
texture = ExtResource( 21 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
autoplay = true

[connection signal="area_entered" from="LevelDesign/FallTracker" to="Ralf" method="_on_FallTracker_area_entered"]
[connection signal="dontUpdateScorePlease" from="Ralf" to="ScoreCounter" method="_on_Ralf_dontUpdateScorePlease"]
[connection signal="ralf_died" from="Ralf" to="ScoreCounter" method="_on_Ralf_ralf_died"]
[connection signal="ralf_died" from="Ralf" to="DeathText" method="_on_Ralf_ralf_died"]
[connection signal="updateScorePlease" from="Ralf" to="ScoreCounter" method="_on_Ralf_updateScorePlease"]
[connection signal="timeout" from="Ralf/Timer" to="Ralf" method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="Ralf" method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="area_entered" from="PartyHat1" to="Ralf" method="_on_PartyHat1_area_entered"]
[connection signal="area_entered" from="PartyHat1" to="PartyHat1" method="_on_PartyHat1_area_entered"]
